--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "aws-sdk": "^2.176.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
@@ -19,6 +20,12 @@
     "node-uuid": "^1.4.8",
     "nodemon": "^1.17.3",
     "serve-favicon": "~2.4.5",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "express-session": "^1.13.0",
+    "mongoose": "^4.4.5",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
   }
 }
